# aoc2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md
day1/: part1.c  part2.c
day1/src/: CMakeLists.txt  part1.c  part2.c
day2/: part1.c  part2.c
day2/src/: CMakeLists.txt  part1.c  part2.c
day3/: part1.c  part2.c
day3/src/: CMakeLists.txt  part1.c  part2.c
day4/: part1.c  part2.c
day4/src/: CMakeLists.txt  part1.c  part2.c
day5/: part1.c  part2.c
day5/src/: part1.c  part2.c
day6/: part1.c  part2.c
day6/src/: CMakeLists.txt  part1.c  part2.c
day7/: part1.c  part2.c
lib/: CMakeLists.txt
lib/stack/: stack.c  stack.h
